# Cpp11Book

./: .gitignore  README.md
Parte 1 - Panoramica del C++/02 Fondamenti/01 hello world/hello_world/: hello_world.cpp  hello_world.h
Parte 1 - Panoramica del C++/02 Fondamenti/02 I Fondamenti/01 hello world/: CMakeLists.txt
Parte 1 - Panoramica del C++/02 Fondamenti/02 I Fondamenti/02 tipi variabili e aritmetica/: CMakeLists.txt
Parte 1 - Panoramica del C++/02 Fondamenti/02 I Fondamenti/02 tipi variabili e aritmetica/tipi_variabili_e_aritmetica/: tipi_variabili_e_aritmetica.h
Parte 1 - Panoramica del C++/02 Fondamenti/02 I Fondamenti/04 test e cicli/test_e_cicli/: test_e_cicli.h
Parte 1 - Panoramica del C++/02 Fondamenti/02 I Fondamenti/05 puntatori array e cicli/: CMakeLists.txt
Parte 1 - Panoramica del C++/02 Fondamenti/02 I Fondamenti/05 puntatori array e cicli/puntatori_array_e_cicli/: puntatori_array_e_cicli.cpp  puntatori_array_e_cicli.h
Parte 1 - Panoramica del C++/02 Fondamenti/03 Costanti/03 Costanti/: CMakeLists.txt
Parte 1 - Panoramica del C++/02 Fondamenti/03 Costanti/03 Costanti/costanti/: CMakeLists.txt  costanti.cpp
Parte 1 - Panoramica del C++/02 Fondamenti/05 puntatori array e cicli/puntatori_array_e_cicli/: puntatori_array_e_cicli.cpp
Parte 1 - Panoramica del C++/03 Tipi definiti dall'utente/01 strutture/: CMakeLists.txt
Parte 1 - Panoramica del C++/03 Tipi definiti dall'utente/01 strutture/strutture/: CMakeLists.txt  strutture.cpp  strutture.h
Parte 1 - Panoramica del C++/03 Tipi definiti dall'utente/02 classi/: CMakeLists.txt
Parte 1 - Panoramica del C++/03 Tipi definiti dall'utente/02 classi/classi/: CMakeLists.txt  classi.cpp  classi.h
Parte 1 - Panoramica del C++/03 Tipi definiti dall'utente/03 enumerazioni/: CMakeLists.txt
Parte 1 - Panoramica del C++/03 Tipi definiti dall'utente/03 enumerazioni/enumerazioni/: CMakeLists.txt  enumerazioni.cpp  enumerazioni.h
Parte 1 - Panoramica del C++/Fondamenti/01 hello world/hello_world/: CMakeLists.txt
Parte 1 - Panoramica del C++/Fondamenti/02 tipi variabili e aritmetica/tipi_variabili_e_aritmetica/: CMakeLists.txt  tipi_variabili_e_aritmetica.cpp
Parte 1 - Panoramica del C++/Fondamenti/03 Costanti/03 Costanti/costanti/: costanti.h
Parte 1 - Panoramica del C++/Fondamenti/04 test e cicli/: CMakeLists.txt
Parte 1 - Panoramica del C++/Fondamenti/04 test e cicli/test_e_cicli/: CMakeLists.txt  test_e_cicli.cpp
Parte 1 - Panoramica del C++/Fondamenti/05 puntatori array e cicli/puntatori_array_e_cicli/: CMakeLists.txt  puntatori_array_e_cicli.cpp
